@@ -4,67 +4,125 @@ import net.runelite.api.coords.WorldPoint;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
-import net.runelite.client.plugins.worldmap.*;
+
+import java.lang.reflect.Method;
+import java.lang.reflect.InvocationTargetException;
+
 public class HunterAreaUtils {
-    HunterAreaLocation HunterAreaLocation;
-    /**
-     * Get all hunter areas.
-     * @return List of all HunterAreaLocation enum values.
-     */
-    public static List<HunterAreaLocation> getAllAreas() {
-        return Arrays.asList(HunterAreaLocation.values());
+
+    private static final String HUNTER_AREA_LOCATION_CLASS = "net.runelite.client.plugins.worldmap.HunterAreaLocation";
+
+    public static List<String> getAllAreaNames() {
+        try {
+            Class<?> enumClass = Class.forName(HUNTER_AREA_LOCATION_CLASS);
+            return Arrays.stream(enumClass.getEnumConstants())
+                    .map(Object::toString)
+                    .collect(Collectors.toList());
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+            return List.of();
+        }
     }
 
-    /**
-     * Search for areas containing a specific creature.
-     * @param creatureName The name of the creature to search for.
-     * @return List of HunterAreaLocation where the creature can be found.
-     */
-    public static List<HunterAreaLocation> getAreasForCreature(String creatureName) {
-        return Arrays.stream(HunterAreaLocation.values())
-                .filter(area -> area.getTooltip().toLowerCase().contains(creatureName.toLowerCase()))
-                .collect(Collectors.toList());
+    public static List<String> getAreaNamesForCreature(String creatureName) {
+        try {
+            Class<?> enumClass = Class.forName(HUNTER_AREA_LOCATION_CLASS);
+            Method getTooltip = enumClass.getMethod("getTooltip");
+            return Arrays.stream(enumClass.getEnumConstants())
+                    .filter(area -> {
+                        try {
+                            return ((String) getTooltip.invoke(area)).toLowerCase().contains(creatureName.toLowerCase());
+                        } catch (IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                            return false;
+                        }
+                    })
+                    .map(Object::toString)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            e.printStackTrace();
+            return List.of();
+        }
     }
 
-    /**
-     * Get all WorldPoints for areas containing a specific creature.
-     * @param creatureName The name of the creature to search for.
-     * @return List of WorldPoints where the creature can be found.
-     */
     public static List<WorldPoint> getLocationsForCreature(String creatureName) {
-        return getAreasForCreature(creatureName).stream()
-                .map(HunterAreaLocation::getLocation)
-                .collect(Collectors.toList());
+        try {
+            Class<?> enumClass = Class.forName(HUNTER_AREA_LOCATION_CLASS);
+            Method getTooltip = enumClass.getMethod("getTooltip");
+            Method getLocation = enumClass.getMethod("getLocation");
+            return Arrays.stream(enumClass.getEnumConstants())
+                    .filter(area -> {
+                        try {
+                            return ((String) getTooltip.invoke(area)).toLowerCase().contains(creatureName.toLowerCase());
+                        } catch (IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                            return false;
+                        }
+                    })
+                    .map(area -> {
+                        try {
+                            return (WorldPoint) getLocation.invoke(area);
+                        } catch (IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                            return null;
+                        }
+                    })
+                    .filter(wp -> wp != null)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            e.printStackTrace();
+            return List.of();
+        }
     }
 
-    /**
-     * Get all creatures available in the game.
-     * @return List of all unique creature names.
-     */
     public static List<String> getAllCreatures() {
-        return Arrays.stream(HunterAreaLocation.values())
-                .flatMap(area -> Arrays.stream(area.getTooltip().split("<br>")))
-                .map(creature -> creature.substring(0, creature.lastIndexOf('(')).trim())
-                .distinct()
-                .sorted()
-                .collect(Collectors.toList());
+        try {
+            Class<?> enumClass = Class.forName(HUNTER_AREA_LOCATION_CLASS);
+            Method getTooltip = enumClass.getMethod("getTooltip");
+            return Arrays.stream(enumClass.getEnumConstants())
+                    .flatMap(area -> {
+                        try {
+                            return Arrays.stream(((String) getTooltip.invoke(area)).split("<br>"));
+                        } catch (IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                            return null;
+                        }
+                    })
+                    .filter(creature -> creature != null)
+                    .map(creature -> creature.substring(0, creature.lastIndexOf('(')).trim())
+                    .distinct()
+                    .sorted()
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            e.printStackTrace();
+            return List.of();
+        }
     }
 
-    /**
-     * Get the required level for a specific creature.
-     * @param creatureName The name of the creature.
-     * @return The required level, or -1 if the creature is not found.
-     */
     public static int getRequiredLevelForCreature(String creatureName) {
-        return Arrays.stream(HunterAreaLocation.values())
-                .flatMap(area -> Arrays.stream(area.getTooltip().split("<br>")))
-                .filter(creature -> creature.toLowerCase().startsWith(creatureName.toLowerCase()))
-                .findFirst()
-                .map(creature -> {
-                    int start = creature.lastIndexOf('(') + 1;
-                    int end = creature.lastIndexOf(')');
-                    return Integer.parseInt(creature.substring(start, end));
-                })
-                .orElse(-1);
+        try {
+            Class<?> enumClass = Class.forName(HUNTER_AREA_LOCATION_CLASS);
+            Method getTooltip = enumClass.getMethod("getTooltip");
+            return Arrays.stream(enumClass.getEnumConstants())
+                    .flatMap(area -> {
+                        try {
+                            return Arrays.stream(((String) getTooltip.invoke(area)).split("<br>"));
+                        } catch (IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                            return null;
+                        }
+                    })
+                    .filter(creature -> creature != null && creature.toLowerCase().startsWith(creatureName.toLowerCase()))
+                    .findFirst()
+                    .map(creature -> {
+                        int start = creature.lastIndexOf('(') + 1;
+                        int end = creature.lastIndexOf(')');
+                        return Integer.parseInt(creature.substring(start, end));
+                    })
+                    .orElse(-1);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return -1;
+        }
     }
 }
